# 3sx-online

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  build-deps-android.sh  build-deps-vita.sh  build-deps.sh  build-ffmpeg-vita.sh  build.sh  dist.sh  regions.example.txt  setup-regions.sh
.github/workflows/: build_android.yml  build_psp.yml  build_vita.yml  server_status.yml
android-patches/: sdl3-mali-patches.patch
android-project/: .gitignore  README.md  build.gradle  install-and-run.bat  settings.gradle
android-project/app/: build.gradle
android-project/app/src/main/: AndroidManifest.xml
android-project/app/src/main/java/cl/chambeadores/threesx/: ThreeSXActivity.java
android-project/app/src/main/res/values/: strings.xml
docs/: design-1.7.28.md  rollback-determinism.md
src/: args.c  args.h  main.c
src/arcade/: rom_load.c
src/imgui/: chat_panel.c  chat_panel.h  imgui_wrapper.c  imgui_wrapper.h  login_panel.c  login_panel.h  netplay_panel.c  netplay_panel.h  settings_panel.c  settings_panel.h
src/platform/app/psp/: psp_app.c
src/platform/app/sdl/: sdl_app.c
src/platform/app/vita/: vita_login.c  vita_login.h
src/platform/input/sdl/: sdl_pad.c
src/platform/netplay/: chat.c  chat.h  crash_log.c  crash_log.h  discord_rpc.c  discord_rpc.h  fistbump.c  fistbump.h  game_state.c  game_state.h  netplay.c  netplay.h  netplay_log.c  netplay_log.h  netplay_trace.c  netplay_trace.h  regions.c  regions.h  relay_adapter.c  relay_adapter.h  replay.c  replay.h
src/platform/video/opengl/: opengl_renderer.c  vita_gxm_compat.c
src/platform/video/opengl/glad/: glad.c
src/platform/video/opengl/shaders/vita/: frag_direct.glsl  frag_palette_4.glsl  frag_palette_8.glsl  frag_solid.glsl  vert.glsl
src/platform/video/sdl_gpu/: sdl_gpu_renderer.c
src/port/: creds.c  creds.h  paths.c  resources.c  utils.c
src/port/config/: config.c  config.h
src/port/io/: afs.c  local_ip.c  local_ip.h
src/port/sdl/: netplay_screen.c  netstats_renderer.c  online_ui.c  online_ui.h  text_input.c  text_input.h
src/port/sound/: adx.c
src/sf33rd/AcrSDK/ps2/: flps2etc.c
src/sf33rd/Source/Game/: game.c
src/sf33rd/Source/Game/effect/: eff91.c
src/sf33rd/Source/Game/engine/: manage.c  plcnt.c
src/sf33rd/Source/Game/io/: gd3rd.c  gd3rd.h
src/sf33rd/Source/Game/menu/: menu.c  netplay_menu.c
src/sf33rd/Source/Game/rendering/: texgroup.c
src/sf33rd/Source/Game/sound/: sound3rd.c
src/sf33rd/Source/Game/system/: pause.c
status/: all.json  last-probe.txt  sa-east-1.json  us-east-1.json
